# Cmake-Example

./: .gitignore  CMakeLists.txt  TutorialConfig.h.in  configure.bat  install.bat  readme.md  run.bat  vcpkg.json
src/: main.cpp
src/Adder/: CMakeLists.txt  adder.cpp  adder.h
